<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#ffdd59"
    tools:context="ramim.ramim.javaBook.EncapculationActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Java Encapsulation "
                android:textColor="#EA2027"
                android:textSize="35sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="5dp"

                />


            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/enc"
                android:layout_gravity="center"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i1"
                android:textColor="#3B3B98"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i2"
                android:textColor="#0E0E0F"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i3"
                android:textColor="#3B3B98"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i4"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i5"
                android:textColor="#3B3B98"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i6"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i7"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i8"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ad"
                android:layout_gravity="center"
                />

            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/da"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i9"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />


            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/fg"
                android:layout_gravity="center"
                />
            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/gf"
                android:layout_gravity="center"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Java Package :"
                android:textColor="#559E02"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What is Package ?"
                android:textColor="#559E02"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i10"
                android:textColor="#559E02"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i11"
                android:textColor="#3B3B98"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/pac"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i12"
                android:textColor="#3B3B98"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i13"
                android:textColor="#7C4DFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i14"
                android:textColor="#536DFE"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i15"
                android:textColor="#050505"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i16"
                android:textColor="#536DFE"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />


            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/acc"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i17"
                android:textColor="#536DFE"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"

                />


            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ax"
                android:layout_gravity="center"
                />




        </LinearLayout>


    </ScrollView>


</RelativeLayout>
